537-modocachescaffold/_status.errors.txt

status:  

error in dj537modoscaff


maybe try dj537bmodoscaff with fresh django 1.x



goal:

try https://github.com/modocache/django-generate-scaffold






_____________


dj537modoscaff


dc exec djdev python manage.py generatescaffold blogs Post title:string body:text is_public:bool blog:foreignkey=Blog


error..

  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/usr/local/lib/python3.7/site-packages/generate_scaffold/management/commands/generatescaffold.py", line 186
    exec code in globals()
            ^
SyntaxError: invalid syntax
albe@vamp398:/srv/dkr/532dkrcollection/537-modocachescaffold$


_____________



# django>=2.2,<3.0
django<2



djdev_1     | Performing system checks...
djdev_1     |
djdev_1     | Unhandled exception in thread started by <function check_errors.<locals>.wrapper at 0x7fea427e5a70>
djdev_1     | Traceback (most recent call last):
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/utils/autoreload.py", line 228, in wrapper
djdev_1     |     fn(*args, **kwargs)
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/core/management/commands/runserver.py", line 124, in inner_run
djdev_1     |     self.check(display_num_errors=True)
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/core/management/base.py", line 359, in check
djdev_1     |     include_deployment_checks=include_deployment_checks,
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/core/management/base.py", line 346, in _run_checks
djdev_1     |     return checks.run_checks(**kwargs)
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/core/checks/registry.py", line 81, in run_checks
djdev_1     |     new_errors = check(app_configs=app_configs)
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/core/checks/urls.py", line 16, in check_url_config
djdev_1     |     return check_resolver(resolver)
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/core/checks/urls.py", line 26, in check_resolver
djdev_1     |     return check_method()
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/urls/resolvers.py", line 256, in check
djdev_1     |     for pattern in self.url_patterns:
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/utils/functional.py", line 35, in __get__
djdev_1     |     res = instance.__dict__[self.name] = self.func(instance)
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/urls/resolvers.py", line 407, in url_patterns
djdev_1     |     patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/utils/functional.py", line 35, in __get__
djdev_1     |     res = instance.__dict__[self.name] = self.func(instance)
djdev_1     |   File "/usr/local/lib/python3.7/site-packages/django/urls/resolvers.py", line 400, in urlconf_module
djdev_1     |     return import_module(self.urlconf_name)
djdev_1     |   File "/usr/local/lib/python3.7/importlib/__init__.py", line 127, in import_module
djdev_1     |     return _bootstrap._gcd_import(name[level:], package, level)
djdev_1     |   File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
djdev_1     |   File "<frozen importlib._bootstrap>", line 983, in _find_and_load
djdev_1     |   File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
djdev_1     |   File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
djdev_1     |   File "<frozen importlib._bootstrap_external>", line 728, in exec_module
djdev_1     |   File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
djdev_1     |   File "/code/djangoproj/urls.py", line 17, in <module>
djdev_1     |     from django.urls import path
djdev_1     | ImportError: cannot import name 'path' from 'django.urls' (/usr/local/lib/python3.7/site-packages/django/urls/__init__.py)


_____________

